--- a/articles/certeza/index.mdx
+++ b/articles/certeza/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: "subjuntivo de certeza（接続法 - 確実さ）"
+title: "Subjuntivo de certeza（接続法 - 確実さ）"
 date: "2021-09-24"
 hero_image: "./certeza.png"
 hero_image_alt: "No es seguro que Jaime sepa nadar."
-tags: ["subjuntivo"]
+tags: ["Subjuntivo"]
 embeddedImagesLocal: ["./certeza.png"]
 ---
 
