--- a/articles/impersonalidad/index.mdx
+++ b/articles/impersonalidad/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: "impersonalidad（非人称）"
+title: "Impersonalidad（非人称）"
 date: "2021-09-10"
 hero_image: "./impersonalidad.png"
 hero_image_alt: "泥棒が財布を盗んでいる"
-tags: ["impersonalidad", "la voz pasiva"]
+tags: ["Impersonalidad", "La voz pasiva"]
 embeddedImagesLocal: ["./impersonalidad.png"]
 ---
 
@@ -30,9 +30,9 @@ export const examples = {
     "人々は、働けば働くほど、稼ぎが減っていく。",
     "En mi pueblo, si se tiene algo de dinero, se vive muy bien porque se come sano y no hay ni estrés.",
     "私の村では、もし（人が）いくばくかのお金を持っていれば、とても快適に住める、なぜなら健康的なものを食べ、ストレスがないからだ。",
-    "En el sur de España la gente se acuesta muy tarde.",
+    "En el sur de España la gente※ se acuesta muy tarde.",
     "スペイン南部では、人々はとても遅く寝る。",
-    "En algunos países no se siente uno libre.",
+    "En algunos países no se siente uno※ libre.",
     "いくつかの国では、人は自分が自由であると感じない。",
   ],
   exes2: [
