--- a/articles/pluscuamperfecto/index.mdx
+++ b/articles/pluscuamperfecto/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: "preterito pluscuamperfecto（過去完了）"
+title: "Pretérito pluscuamperfecto（過去完了）"
 date: "2021-09-17"
 hero_image: "./pluscuamperfecto.jpg"
 hero_image_alt: "clock"
-tags: ["tiempo"]
+tags: ["El tiempo"]
 embeddedImagesLocal: ["./pluscuamperfecto.jpg", "./pluscuamperfecto2.png"]
 ---
 
@@ -69,7 +69,7 @@ export const examples = {
   <GatsbyImage alt="Quédate con migo" image={getImage(props.localImages[1])} />
 </Box>
 
-## preterito pluscuamperfecto の 4 つの用法
+## Pretérito pluscuamperfecto の 4 つの用法
 
 基本の用法は１と２。でも、3 と 4 も普通に使われている。
 
@@ -110,10 +110,10 @@ export const examples = {
 ## 基本形
 
 <Box bg="cGray" color="cBeige" p="3" mt="4" mb="8">
-  「 haber の preterito imperfecto（線過去） + pariticipio（過去分詞）」
+  「 haber の Pretérito imperfecto（線過去） + pariticipio（過去分詞）」
 </Box>
 
-## haber の preterito imperfecto（線過去）の conjugación（活用）
+## haber の Préterito imperfecto（線過去）の conjugación（活用）
 
 <Table variant="striped" colorScheme="blackAlpha" mt="3" mb="8">
   <Tbody>
@@ -184,7 +184,7 @@ export const examples = {
   </Tbody>
 </Table>
 
-## 3. preterito perfecto（現在完了）の代わりに使うことで、丁寧さを表す。
+## 3. Pretérito perfecto（現在完了）の代わりに使うことで、丁寧さを表す。
 
 例文
 
