--- a/articles/quedar/index.mdx
+++ b/articles/quedar/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: "多義語 quedar"
+title: "多義語 Quedar"
 date: "2021-09-11"
 hero_image: "./quedar.jpg"
 hero_image_alt: "Quédate con migo"
-tags: ["vocabulario"]
+tags: ["Vocabulario"]
 embeddedImagesLocal: ["./quedar.jpg"]
 ---
 
