--- a/articles/quedarse/index.mdx
+++ b/articles/quedarse/index.mdx
@@ -1,9 +1,9 @@
 ---
-title: "多義語 quedarse（reflexivo）"
+title: "多義語 Quedarse（reflexivo）"
 date: "2021-09-12"
 hero_image: "./quedarse.jpg"
 hero_image_alt: "no"
-tags: ["vocabulario"]
+tags: ["Vocabulario"]
 embeddedImagesLocal: ["./quedarse.jpg"]
 ---
 
