--- a/articles/pasiva/index.mdx
+++ b/articles/pasiva/index.mdx
@@ -3,7 +3,7 @@ title: "La voz pasiva（受動態）"
 date: "2021-09-08"
 hero_image: "./pasiva.png"
 hero_image_alt: "子供と大人が柔道をしている"
-tags: ["la voz pasiva", "impersonalidad"]
+tags: ["La voz pasiva", "Impersonalidad"]
 embeddedImagesLocal: ["./pasiva.png"]
 ---
 
