--- a/articles/condicional/index.mdx
+++ b/articles/condicional/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Condicional（直接法過去未来）"
 date: "2021-09-06"
-hero_image: "./chica.png"
+hero_image: "./chica.jpg"
 hero_image_alt: "勉強してる女の子"
 tags: ["Condicional"]
-embeddedImagesLocal: ["./chica.png"]
+embeddedImagesLocal: ["./chica.jpg"]
 ---
 
 import { GatsbyImage, getImage } from "gatsby-plugin-image"
@@ -333,10 +333,10 @@ export const examples = {
   gap={1}
   mt="3"
 >
-  <GridItem rowSpan={1} colSpan={1} color="cBeige3" align="center" bg="cGreen2">
+  <GridItem rowSpan={1} colSpan={1} color="cBeige3" align="center" bg="cGreen">
     [条件節]
   </GridItem>
-  <GridItem rowSpan={1} colSpan={1} color="cGray" align="center" bg="cGreen2">
+  <GridItem rowSpan={1} colSpan={1} color="cBlack" align="center" bg="cGreen">
     [帰結節]
   </GridItem>
   <GridItem
@@ -344,7 +344,7 @@ export const examples = {
     colSpan={1}
     color="cBeige3"
     px="1"
-    bg="cGreen2"
+    bg="cGreen"
     align="center"
   >
     仮定を述べる
@@ -352,9 +352,9 @@ export const examples = {
   <GridItem
     rowSpan={1}
     colSpan={1}
-    color="cGray"
+    color="cBlack"
     px="1"
-    bg="cGreen2"
+    bg="cGreen"
     align="center"
   >
     結論を述べる
@@ -366,20 +366,25 @@ export const examples = {
     pr="1"
     pl="2"
     fontSize={{ base: "xs", sm: "sm", md: "md" }}
-    bg="cGreen2"
+    bg="cGreen"
   >
     Si + imperfecto de subjuntivo
   </GridItem>
-  <GridItem rowSpan={2} colSpan={1} color="cGray" pr="1" pl="2" bg="cGreen2">
+  <GridItem rowSpan={2} colSpan={1} color="cBlack" pr="1" pl="2" bg="cGreen">
     condicional
   </GridItem>
-  <GridItem rowSpan={2} colSpan={2} color="cBeige3" pr="1" pl="2" bg="cGreen2">
+  <GridItem rowSpan={2} colSpan={2} color="cBeige3" pr="1" pl="2" bg="cGreen">
     Si yo fuera rico,
-    <span style={{ color: "#737363" }}> siempre muy feliz.</span>
+    <span style={{ color: "#423D38" }}>
+      {" "}
+      Viviría siempre muy feliz sin tener que trabajar.
+    </span>
   </GridItem>
-  <GridItem rowSpan={2} colSpan={2} color="cBeige3" pr="1" pl="2" bg="cGreen2">
+  <GridItem rowSpan={2} colSpan={2} color="cBeige3" pr="1" pl="2" bg="cGreen">
     もし私が金持ちならば、
-    <span style={{ color: "#737363" }}>すっと幸せに暮らせるだろう。</span>
+    <span style={{ color: "#423D38" }}>
+      働く必要なく、ずっと幸せに暮らせるだろう。
+    </span>
   </GridItem>
 </Grid>
 
