--- a/articles/impersonalidad/index.mdx
+++ b/articles/impersonalidad/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Impersonalidad（非人称）"
 date: "2021-09-10"
-hero_image: "./impersonalidad.png"
+hero_image: "./impersonalidad.jpg"
 hero_image_alt: "泥棒が財布を盗んでいる"
 tags: ["Impersonalidad", "La voz pasiva"]
-embeddedImagesLocal: ["./impersonalidad.png"]
+embeddedImagesLocal: ["./impersonalidad.jpg"]
 ---
 
 import { Link } from "gatsby"
