--- a/articles/pasiva/index.mdx
+++ b/articles/pasiva/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: "La voz pasiva（受動態）"
 date: "2021-09-08"
-hero_image: "./pasiva.png"
+hero_image: "./pasiva.jpg"
 hero_image_alt: "子供と大人が柔道をしている"
 tags: ["La voz pasiva", "Impersonalidad"]
-embeddedImagesLocal: ["./pasiva.png"]
+embeddedImagesLocal: ["./pasiva.jpg"]
 ---
 
 import { Link } from "gatsby"
