--- a/articles/pluscuamperfecto/index.mdx
+++ b/articles/pluscuamperfecto/index.mdx
@@ -86,8 +86,7 @@ export const examples = {
     Hasta que no empezó a ir al instituto, Nacho había sido muy timido.
   </GridItem>
   <GridItem rowSpan={1} colSpan={1} bg="cYellow" p="2">
-    2. 矢印上の１時点 →
-    過去のある時点より以前の出来事。（それがいつかの言及はなし。）
+    2. 矢印上の１時点 → 過去のある時点より以前の出来事。（いつかは不明。）
   </GridItem>
   <GridItem rowSpan={1} colSpan={1} bg="cYellow2" p="2">
     Cuando llegué al campo, el partido había empezado.
