--- a/articles/condicional-compuesto/index.mdx
+++ b/articles/condicional-compuesto/index.mdx
@@ -3,7 +3,7 @@ title: "Condicional compuesto（過去未来完了）"
 date: "2021-11-08"
 hero_image: "./condicionalcompuesto.jpg"
 hero_image_alt: "xxx."
-tags: ["EL tiempo", "Condicional"]
+tags: ["Condicional"]
 embeddedImagesLocal: ["./condicionalcompuesto.jpg"]
 ---
 
