--- a/articles/pluscuamperfecto/index.mdx
+++ b/articles/pluscuamperfecto/index.mdx
@@ -3,7 +3,7 @@ title: "Pretérito pluscuamperfecto（過去完了）"
 date: "2021-09-17"
 hero_image: "./pluscuamperfecto.jpg"
 hero_image_alt: "clock"
-tags: ["El tiempo"]
+tags: ["Pasado"]
 embeddedImagesLocal: ["./pluscuamperfecto.jpg", "./pluscuamperfecto2.png"]
 ---
 
