--- a/articles/certeza/index.mdx
+++ b/articles/certeza/index.mdx
@@ -3,7 +3,7 @@ title: "Subjuntivo de certeza（接続法 - 確実さ）"
 date: "2021-09-24"
 hero_image: "./certeza.png"
 hero_image_alt: "No es seguro que Jaime sepa nadar."
-tags: ["Subjuntivo"]
+tags: ["Subjuntivo（接続法）"]
 embeddedImagesLocal: ["./certeza.png"]
 ---
 
