--- a/articles/condicional/index.mdx
+++ b/articles/condicional/index.mdx
@@ -3,7 +3,7 @@ title: "Condicional（直接法過去未来）"
 date: "2021-09-06"
 hero_image: "./chica.jpg"
 hero_image_alt: "勉強してる女の子"
-tags: ["Condicional"]
+tags: ["Condicional（過去未来）"]
 embeddedImagesLocal: ["./chica.jpg"]
 ---
 
