--- a/articles/quedar/index.mdx
+++ b/articles/quedar/index.mdx
@@ -3,7 +3,7 @@ title: "多義語 Quedar"
 date: "2021-09-11"
 hero_image: "./quedar.jpg"
 hero_image_alt: "Quédate con migo"
-tags: ["Vocabulario"]
+tags: ["Vocabulario（ボキャブラリー）"]
 embeddedImagesLocal: ["./quedar.jpg"]
 ---
 
