--- a/articles/quedarse/index.mdx
+++ b/articles/quedarse/index.mdx
@@ -3,7 +3,7 @@ title: "多義語 Quedarse（reflexivo）"
 date: "2021-09-12"
 hero_image: "./quedarse.jpg"
 hero_image_alt: "no"
-tags: ["Vocabulario"]
+tags: ["Vocabulario（ボキャブラリー）"]
 embeddedImagesLocal: ["./quedarse.jpg"]
 ---
 
