--- a/articles/futuro-perfecto/index.mdx
+++ b/articles/futuro-perfecto/index.mdx
@@ -3,7 +3,7 @@ title: "Futuro perfecto（未来完了）"
 date: "2021-10-01"
 hero_image: "./futuro-perfecto.jpg"
 hero_image_alt: "En 2100, habremos inventado la máquina del tiempo."
-tags: ["Futuro"]
+tags: ["Futuro（未来）"]
 embeddedImagesLocal: ["./futuro-perfecto.jpg"]
 ---
 
