--- a/articles/impersonalidad/index.mdx
+++ b/articles/impersonalidad/index.mdx
@@ -3,7 +3,7 @@ title: "Impersonalidad（非人称）"
 date: "2021-09-10"
 hero_image: "./impersonalidad.jpg"
 hero_image_alt: "泥棒が財布を盗んでいる"
-tags: ["Impersonalidad", "La voz pasiva"]
+tags: ["Impersonalidad（非人称）", "La voz pasiva（受動態）"]
 embeddedImagesLocal: ["./impersonalidad.jpg"]
 ---
 
