--- a/articles/pasiva/index.mdx
+++ b/articles/pasiva/index.mdx
@@ -3,7 +3,7 @@ title: "La voz pasiva（受動態）"
 date: "2021-09-08"
 hero_image: "./pasiva.jpg"
 hero_image_alt: "子供と大人が柔道をしている"
-tags: ["La voz pasiva", "Impersonalidad"]
+tags: ["Impersonalidad（非人称）", "La voz pasiva（受動態）"]
 embeddedImagesLocal: ["./pasiva.jpg"]
 ---
 
