--- a/articles/futuro-perfecto/index.mdx
+++ b/articles/futuro-perfecto/index.mdx
@@ -24,8 +24,8 @@ import {
 
 export const examples = {
   exes1: [
-    "Dentro de tres años, Andrea ya habrá tenido otro hijo.",
-    "３年後には、アンドレアはもう1人子供がいるだろう。",
+    "Dentro de tres años, Maria ya habrá tenido otro hijo.",
+    "3年後には、マリアはもう1人子供がいるだろう。",
     "No vengas a las siete. Todavía no habré llegado a casa.",
     "18時に来ないで。まだ家に着いてないだろうから。",
     "El verano que viene, no habrá ninguna restricción de covid.",
@@ -34,12 +34,12 @@ export const examples = {
     "今年の終わりには、アンドレアはグズマンと別れているだろう。※",
   ],
   exes2: [
-    "¡Qué raro! Andrea y Guzman no hablan. -Habrán discutido. ",
-    "ねえ、ちょっと変だよ。アンドレアとグズマンが話してない。 -喧嘩したんだろう。",
-    "El horno está encendido. -Andrea se habrá olvidado de apagarlo.",
-    "オーブンが付けっぱなし。アンドレアが消し忘れたんだろう。",
-    "Andrea está llorando. -Guzman le habrá dado calabazas.",
-    "アンドレアが泣いている。 -グズマンがアンドレアを振ったんだろう。",
+    "¡Qué raro! Paula y Fuan no hablan. -Habrán discutido. ",
+    "ねえ、ちょっと変だよ。パウラとフアンが話してない。 -喧嘩したんだろう。",
+    "El horno está encendido. -Marta se habrá olvidado de apagarlo.",
+    "オーブンが付けっぱなし。マルタが消し忘れたんだろう。",
+    "Natalia está llorando. -Fernando le habrá dado calabazas.",
+    "ナタリアが泣いている。 -フェルナンドがナタリアを振ったんだろう。",
     "Andrea no sonríe. -Nadie habrá puesto 'me gusta' en su instagram.",
     "アンドレアに笑顔がない。 -誰も彼女のインスタグラムに「いいね」をしなかったんだろう。",
   ],
